kubernetes/fundamentals/ingress/path-ingress.yaml
---
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: path-ingress

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - path: /live
            pathType: Prefix

            backend:
              service:
                name: flask-service
                port:
                  number: 80
